```python
class RestaurantDataController:
    def saveFavoriteRestaurant(self, restaurant):
        pass

    def saveFavoriteDish(self, dish):
        pass