```typescript
import React, { useState, useEffect } from 'react';
import { useDispatch } from 'react-redux';

interface NetworkService {
  connectionStatus: boolean;
  checkNetworkConnection: () => boolean;
}

const useNetworkService = (): NetworkService => {
  const [connectionStatus, setConnectionStatus] = useState<boolean>(false);

  const checkNetworkConnection = (): boolean => {
    // Implement network connection check logic here.  This is a placeholder.
    const isOnline = navigator.onLine;
    setConnectionStatus(isOnline);
    return isOnline;
  };

  useEffect(() => {
    checkNetworkConnection();
    // Add event listener for online/offline changes
    window.addEventListener('online', checkNetworkConnection);
    window.addEventListener('offline', checkNetworkConnection);
    return () => {
      window.removeEventListener('online', checkNetworkConnection);
      window.removeEventListener('offline', checkNetworkConnection);
    };
  }, []);

  return { connectionStatus, checkNetworkConnection };
};

export default useNetworkService;